src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Aadhar_Card_Number__c</fullName>
        <label>Aadhar Card Number</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Timming__c</fullName>
        <label>Batch Timming</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Batch_over_timming__c</fullName>
        <formula>Batch_Timming__c + 1</formula>
        <label>Batch over timming</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Mysuru</fullName>
                </value>
                <value>
                    <fullName>Mangaluru</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Jodhpur</fullName>
                </value>
                <value>
                    <fullName>Ajmer</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Surat</fullName>
                </value>
                <value>
                    <fullName>Rajkot</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Lucknow</fullName>
                </value>
                <value>
                    <fullName>Kanpur</fullName>
                </value>
                <value>
                    <fullName>Agra</fullName>
                </value>
                <value>
                    <fullName>Indore</fullName>
                </value>
                <value>
                    <fullName>Bhopal</fullName>
                </value>
                <value>
                    <fullName>Ujjain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_12th_Percentage__c</fullName>
        <label>Class 12th Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Working__c</fullName>
        <label>Current Working</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <label>Date of Registration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exprience__c</fullName>
        <label>Exprience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Installement__c</fullName>
        <defaultValue>5000</defaultValue>
        <label>Fee Installement</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graduate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>information that student is Graduate or not</description>
        <label>Graduate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin_ID__c</fullName>
        <label>Linkedin ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Gujrat</fullName>
                </value>
                <value>
                    <fullName>maharashtra</fullName>
                </value>
                <value>
                    <fullName>uttar pradesh</fullName>
                </value>
                <value>
                    <fullName>madhya pradesh</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Contact__c</fullName>
        <label>Student Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Student Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_reg_No__c</fullName>
        <displayFormat>St-{0000}</displayFormat>
        <label>Student reg No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology_familiar__c</fullName>
        <label>Technology familiar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Java script</fullName>
                </value>
                <value>
                    <fullName>Angular</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <recordTypes>
        <fullName>exprience</fullName>
        <active>true</active>
        <label>exprience</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>age</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c  &gt; 16</errorConditionFormula>
        <errorMessage>enter the percentage in range</errorMessage>
    </validationRules>
</CustomObject>